2006-05-08  MenTaLguY  <mental@rydia.net>

	* src/display/curve.h, src/display/curve.cpp, src/dropper-context.cpp:

	  get rid of sp_curve_new_from_static_bpath() in a bid to simplify curve
	  memory management

2006-05-08  MenTaLguY  <mental@rydia.net>

	* src/display/canvas-bpath.cpp, src/display/curve.cpp, src/display/curve.h,
	  src/display/nr-arena-shape.cpp, src/draw-context.cpp,
	  src/extension/internal/odf.cpp, src/extension/internal/pov-out.cpp,
	  src/nodepath.cpp, src/object-snapper.cpp, src/path-chemistry.cpp,
	  src/sp-flowregion.cpp, src/splivarot.cpp, src/sp-offset.cpp,
	  src/sp-path.cpp, src/sp-shape.cpp, src/sp-spiral.cpp, src/sp-star.cpp,
	  src/sp-use-reference.cpp:

	  eliminate direct accesses to SPCurve::bpath

2006-05-08  MenTaLguY  <mental@rydia.net>

	* src/streams-zlib.cpp, src/streams-jar.cpp, src/splivarot.cpp,
	  src/extension/internal/bluredge.cpp:

	  use std::vector rather than dynamically-sized automatic arrays,
	  plus cleanups and minor fixes, and dead code removal

2006-05-08  MenTaLguY  <mental@rydia.net>

	* src/debug/demangle.cpp, src/debug/demangle.h, src/sp-object.cpp,
	  src/gc-anchored.cpp, src/debug/Makefile_insert:

	  use c++filt for symbol demangling if available

2006-05-08  MenTaLguY  <mental@rydia.net>

	* src/xml/repr-util.cpp:
	
	  comments explaining namespace mapping for the broken sodipodi namespace

2006-05-08  Carl Hetherington  <inkscape@carlh.net>

	* src/seltrans.cpp, src/snap.cpp, src/snap.h: fix ctrl-scaling
	when there is no snap.  More snapping cleanups.

2006-05-07  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* knot.h, knot.cpp, connector-context.cpp:
	  Fix glib-gobject-warnings for knots in the connector tool.

2006-05-07  Jon A. Cruz  <jon@joncruz.org>

	* src/document-subset.cpp:
	  Corrected two bugs, with the minor one hiding the more severe.

2006-05-06  MenTaLguY  <mental@rydia.net>

	* src/xml/repr-util.cpp, src/xml/repr.h:

	  add fixup for incorrect sodipodi namespace
